# Aesthetic

./: .gitignore  LICENSE  README.md  aliases.sh  build.nix  launcher.py  launcher.sh  maker.sh  pyproject.toml  requirement.txt
core/: __init__.py  bot.py
core/cogs/: anime.py  backend.py  ccode.py  checks.py  commands.py  db.py  destiny.py  dfb.py  economy.py  fun.py  git.py  help.py  logging.py  math.py  mod.py  nsfw.py  nuance.py  owner.py  profiles.py  steam.py  tags.py  tasks.py  user.py  welcome.py
core/ext/: __init__.py  cache.py  check.py  converters.py  ctx.py  db.py  help.py  http.py  pagination.py  utils.py
core/ext/steamio/: __init__.py  client.py  http.py
core/ext/steamio/ext/: __init__.py  app.py  user.py  utils.py
cxcode/: proto.pxd  proto.pyx
cxcode/include/: instance.c  instance.h
data/: choises.txt  config.example.py  db.py  dump.sql  example_config.py  facts.txt  fate.sql  launcher.cpp  schema.sql  token.txt
database/: build.sql  database.db  psql.sql  sqhema.sql  tables.sql
dependencies/: launcher.sh
ext/: socials.py  utils.py
migration/: dump.sql
